# nostr-data-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DASHBOARD.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: Home.py
dashboard/pages/: 1_📈_Overview.py  2_🔥_Trending.py  3_📡_Network.py  4_👥_Users.py  5_🌐_Relays.py  6_⚡_Zaps.py
examples/: analytics_example.py
src/nostr_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/nostr_pipeline/analytics/: __init__.py  aggregator.py  query.py
src/nostr_pipeline/extractors/: __init__.py  relay_client.py
src/nostr_pipeline/loaders/: __init__.py  database.py  event_loader.py
src/nostr_pipeline/transformers/: __init__.py  event_processor.py  metrics_calculator.py
tests/: __init__.py  test_event_processor.py  test_metrics_calculator.py
